fix alignment of thumbnails

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -37,12 +37,14 @@ ul.materials .span2 {
   min-height: 200px;
 }
 
+.material .thumbnail .placeholder {
+  margin: 0 auto;
+  width: 120px;
+  height: 100px;
+  background-image: url(http://placehold.it/120x100);
+}
 .material .thumbnail .img {
+  margin: 0 auto;
   width: 120px;
   height: 100px;
 }
-
-.material .thumbnail .placeholder {
-  background-image: url(http://placehold.it/120x100);
-}
-
